...
    <string name="fb_login_protocol_scheme" translatable="false">fb1864781376934348</string>
    <string name="facebook_app_id" translatable="false">1864781376934348</string>

    <!--Alert-->
    <string name="alert_ok">Ok</string>
    <string name="email_exists">This e-mail address is already registered.</string>
    <string name="invalid_user">Invalid e-mail address or password.</string>
    <string name="needed_permissions_check_in">"We need our permission to check-in eventApis near you!"</string>
    <string name="unkown_error">An unexpected error has occurred. Please try again later.</string>

    <!--Field Validation-->
    <string name="invalid_email">Please enter a valid e-mail address.</string>
    <string name="invalid_checked">Please agree to the terms and conditions.</string>
    <string name="invalid_password">The password must contain at least 8 characters and a capital letter</string>
    <string name="forgot_password_send_code_success">Email code sent</string>

    <string name="send">Send</string>

...
