...
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="email_exists">This e-mail address is already registered.</string>
    <string name="invalid_user">Invalid e-mail address or password.</string>
    <string name="unkown_error">An unexpected error has occurred. Please try again later.</string>
    <string name="email_not_confirmed">Your e-mail address has not been confirmed.</string>
    <string name="fill_all_fields_to_sing_in">Please, fill all required fields to sign in.</string>
    <string name="really_want_to_leave">Really want to leave?</string>
    <string name="delete_ticket_success">Delete Success</string>
    <!--Field Validation-->
    <string name="invalid_checked">Please agree to the terms and conditions.</string>
    <string name="emptyFeed">There are no posts.</string>
    <string name="invalid_password">The password must contain at least 8 characters and a capital letter</string>
...
